20200616赵志强第二次提交

--- a/src/main/resources/templates/systemmanagement/user_control.html
+++ b/src/main/resources/templates/systemmanagement/user_control.html
@@ -129,11 +129,11 @@
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;">开户</a>
                     <dl class="layui-nav-child">
-                        <dd><a class="site-demo-active" data-id="1" data-url="/healthBureau" id="healthBureau" data-title="卫生局">卫生局</a></dd>
-                        <dd><a class="site-demo-active" data-id="2" data-url="/healthCenters" id="healthCenters" data-title="卫生院">卫生院</a></dd>
-                        <dd><a class="site-demo-active" data-id="3" data-url="/medicalRoom" id="medicalRoom" data-title="卫生室">卫生室</a></dd>
-                        <dd><a class="site-demo-active" data-id="4" data-url="/vendors" id="vendors" data-title="供货商">供货商</a></dd>
-                        <dd><a class="site-demo-active" data-id="5" data-url="/proxyMonitor" id="proxyMonitor" data-title="监督机构">监督机构</a></dd>
+                        <dd><a class="site-demo-active" data-id="1" data-url="/healthBureau" id="healthBureau" data-title="卫生局">医院管理</a></dd>
+<!--                        <dd><a class="site-demo-active" data-id="2" data-url="/healthCenters" id="healthCenters" data-title="卫生院">卫生院</a></dd>
+                        <dd><a class="site-demo-active" data-id="3" data-url="/medicalRoom" id="medicalRoom" data-title="卫生室">卫生室</a></dd>-->
+                        <dd><a class="site-demo-active" data-id="4" data-url="/vendors" id="vendors" data-title="供货商">供货商管理</a></dd>
+                        <dd><a class="site-demo-active" data-id="5" data-url="/proxyMonitor" id="proxyMonitor" data-title="监督机构">监督机构管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
