--- a/src/main/resources/templates/purchasingmanagement1/po_maintenance1.html
+++ b/src/main/resources/templates/purchasingmanagement1/po_maintenance1.html
@@ -29,6 +29,26 @@
                }
            })
        })
+        //模糊查询
+        function selectLike() {
+            url="selectLikePurchaseOrder";
+            var purchaseOrderNumber = $("#purchaseOrderNumber3").val();
+            var nameOfPurchaseOrder = $("#nameOfPurchaseOrder3").val();
+            var purchaseState = $("#purchaseState3").val();
+            var submissionTime = $("#submissionTime3").val();
+            var hospitalId = $("#hospitalId3").val();
+            $(".context").empty();
+            $.get(url,{"purchaseOrderNumber":purchaseOrderNumber,"nameOfPurchaseOrder":nameOfPurchaseOrder,
+                "purchaseState":purchaseState,"submissionTime":submissionTime,"hospitalId":hospitalId},function (data) {
+                for (var i = 0;i<data.length;i++){
+                    $(".context").append('<tr><td>'+data[i].hospitalId+'</td><td>'+data[i].purchaseOrderNumber + '</td><td>' +data[i].nameOfPurchaseOrder+ '</td><td>'
+                        +data[i].createReceiptsTime + '</td><td>'+ data[i].submissionTime+ '</td><td>'+ data[i].createReceiptsTime+ '</td><td>'
+                        + data[i].submissionTime+ '</td><td>'+ data[i].auditTime+ '</td><td>'+ data[i].purchaseState+ '</td><td><button class="btn btn-success btn-sm" data-toggle="modal" data-target="#editModal1" onclick="selectOne( '+data[i].id+')">查看'
+                        +'</button></td><td><button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#editModal1" onclick="selectOne( '+data[i].id+')"> 修改'
+                        +'</button></td><td><button class="btn btn-danger btn-sm" onclick="deletePurchaseOrder('+data[i].id+')">删除'+'</button></td></tr>')
+                }
+            })
+        }
         //查看
         function selectOne(id) {
             url="selectOne";
@@ -115,12 +135,14 @@
             var auditPerson = $("#auditPerson1").val();
             var auditTime1 = $("#auditTime2").val();
             var auditOpinion = $("#auditOpinion1").val();
+            var delState = $("#delState2").val();
             $.get(url,{"hospitalId":hospitalId,"hospitalName":hospitalName,
                 "purchaseOrderNumber":purchaseOrderNumber,"nameOfPurchaseOrder":nameOfPurchaseOrder,
                 "auditTime":auditTime,"createReceiptsTime":createReceiptsTime,"contacts":contacts,
                 "phone":phone,"purchaseState":purchaseState,"submissionTime":submissionTime,
-                "remark":remark,"auditPerson":auditPerson,"auditTime1":auditTime1,"auditOpinion":auditOpinion},function (data) {
-                if (data==2){
+                "remark":remark,"auditPerson":auditPerson,"auditTime1":auditTime1,"auditOpinion":auditOpinion,
+                "delState":delState},function (data) {
+                if (data==1){
                     alert("添加成功")
                     //$("#editModal1").modal('hide');
                     window.location.reload();
@@ -148,12 +170,12 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单编号：</span>
             </td>
             <td >
-                <input class="form-control" id="searchEntity_unitName">
+                <input class="form-control" id="purchaseOrderNumber3">
             </td>
             <td style="text-align: right"><span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单名称：</span>
             </td>
             <td >
-                <input class="form-control" id="searchEntity_organizationalCode">
+                <input class="form-control" id="nameOfPurchaseOrder3">
             </td>
         </tr>
         <tr>
@@ -161,8 +183,8 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单状态：</span>
             </td>
             <td>
-                <select id="durgfrom" style="width: 50%;height: 20%">
-                    <option value="0">未提交</option>
+                <select  style="width: 50%;height: 20%" id="purchaseState3">
+                    <option value="0">请选择</option>
                     <option value="1">卫生院审核中</option>
                     <option value="2">卫生局审核中</option>
                     <option value="3">审核通过</option>
@@ -174,7 +196,7 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购时间：</span>
             </td>
             <td>
-                <input  >
+                <input  id="submissionTime3">
             </td>
         </tr>
         <tr>
@@ -182,12 +204,12 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">医院名称：</span>
             </td>
             <td >
-                <input class="form-control" id="searchntity_organizationalCode">
+                <input class="form-control" id="hospitalId3">
             </td>
         </tr>
     </table>
     <div style="text-align: center;padding-top: 10px">
-        <button class="btn btn-success btn-sm" onclick="selectByEntity()">查询</button>
+        <button class="btn btn-success btn-sm" onclick="selectLike()">查询</button>
     </div>
 </div>
 <div class="box-body">
@@ -200,7 +222,7 @@
                 <div class="form-group form-inline">
                     <div class="btn-group">
                         <button type="button" class="btn btn-success btn-sm" data-toggle="modal"
-                                data-target="#editModal2">添加
+                                data-target="#editModal2" >添加
                         </button>
                     </div>
                 </div>
@@ -422,6 +444,10 @@
                         <td>审核意见:</td>
                         <td>
                             <input class="form-control" id="auditOpinion1" name="auditOpinion1">
+                        </td>
+                        <td>是否显示:</td>
+                        <td>
+                            <input class="form-control" id="delState2" name="delState2">
                         </td>
                     </tr>
                 </table>
